plugins {
	id 'org.springframework.boot' version '2.6.6'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
}

group = 'br.pucrs'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

ext {
	set('springCloudVersion', "2021.0.1")
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	implementation group: 'org.keycloak', name: 'keycloak-admin-client', version: '17.0.1'
	implementation group: 'com.h2database', name: 'h2', version: '2.1.212'
	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.6.6'
	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.6.6'
	// https://mvnrepository.com/artifact/org.keycloak/keycloak-spring-boot-starter
	implementation group: 'org.keycloak', name: 'keycloak-spring-boot-starter', version: '17.0.1'
	implementation group: 'org.keycloak.bom', name: 'keycloak-adapter-bom', version: '17.0.1', ext: 'pom'
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
		}
}

tasks.named('test') {
	useJUnitPlatform()
}
